# testing-c-python-wrapping

./: CMakeLists.txt  README.md  functions.py  test_functions.py
src/: Functions.cpp  Functions.h
tests/: main_test.cpp
